# FDML

./: .clang-format  .gitignore  CMakeLists.txt  README.dev.md  README.md  README.txt  configure.py  figure4.pdn  figures.pptx  plot_d1_d2.py  text_backup.tex  todo.txt  txt.lyx  txt.tex
.github/: dependabot.yaml
.github/workflows/: build.yaml  tests.yaml
cmake/: .gitignore  FDMLConfig.cmake.in
cmake/modules/: BuildTimeFile.cmake  CLS_Common.cmake  CLS_Macros.cmake  FDML_Common.cmake  FDML_Macros.cmake
cmds/fdml_cli/: CMakeLists.txt  fdml_cli.cpp
cmds/fdml_daemon/: CMakeLists.txt  fdml_daemon.cpp
data/: solution.tex
data/square1/: loc_square1.tex  pgn.txt  pgn10.txt  pgn12.txt  pgn13.txt  pgn14.txt  pgn15.txt  pgn16.txt  pgn17.txt  pgn18.txt  pgn19.txt  pgn20.txt  pgn21.txt  pgn22.txt  pgn24.txt  pgn5.txt
data/square11/: square11.ipe  square11.txt
data/square2/: square2.ggb
doc/: Localization_with_Few_Distance_Measurements.docx  figures.pptx  logo_figure.pdn  logo_horizontal.pdn  logo_vertical.pdn  question.lyx
doc/archive/: convex.lyx  txt.lyx
doc/img_first_attempt/: figure2.pdn  figure3.pdn
doc/logo/: logo_figure.pdn
doc/submit/: Localization_with_Few_Distance_Measurements.docx
doc/two_measurements_data/: abstract.tex  analysis.tex  compute_coeffs.m  (+26 more)
ect/: links.txt
fdml/: .clang-format  CMakeLists.txt
fdml-gui/: .gitignore  requirements.txt
fdml/examples/squere_room/: CMakeLists.txt  squere_room.cpp
fdml/include/: defs.h  localizator.h  localizator_daemon.h
fdml/include/fdml/: Hash_rational_point.hpp  bindings_types.hpp  config.hpp  defs.h  defs.hpp  export_ft.hpp  localizator.h  localizator_daemon.h  locator.hpp  locator_daemon.hpp  python_iterator_templates.hpp  retcode.h  retcode.hpp  trapezoid.h  trapezoid.hpp  trapezoider.h  trapezoider.hpp
fdml/include/fdml/internal/: closer_edge.hpp  json_utils.h  json_utils.hpp  utils.hpp
fdml/lib/: locator.cpp
fdml/src/: json_utils.cpp  localizator.cpp  localizator_daemon.cpp  locator_daemon.cpp  trapezoid.cpp  trapezoider.cpp  utils.hpp
fdmlpy/: CMakeLists.txt  __init__.py  requirements.txt  setup.py
fdmlpy/Windows/: __init__.py  __init__.py~
fdmlpy/include/fdmlpy/: Hash_rational_point.hpp  add_attr.hpp  add_extraction.hpp  add_insertion.hpp  export_ft.hpp  export_general_polygon_with_holes_2.hpp  export_point_2.hpp  export_vector_2.hpp  make_iterator.hpp  python_iterator_templates.hpp  stl_input_iterator.hpp  to_string.hpp
fdmlpy/src/: export_gmp.cpp  export_point_2.hpp  export_polygon_2.cpp  export_polygon_with_holes_2.cpp  export_vector_2.hpp  fdmlpy.cpp
finding-elsie/: preprocess_alpha_shape.py  preprocess_clean_scans.py  preprocess_scan_room.py  runtime.py  runtime_clean_predictions.py  runtime_mia.py  runtime_single_measurement.py
img_first_attempt/: figure0.pdn
meshing/: .gitignore  CMakeLists.txt  MC.h  cgal_include.h  manifold_intersection.cpp  manifold_intersection.h  manifold_localization.py  meshing.cpp  meshing_options.cpp  meshing_options.h  read_input.cpp  shoot_ray.cpp  shoot_ray.h  single_measurement.cpp  single_measurement.h  utils.cpp  utils.h
meshing/in/: scene01.poly  square_room.poly
meshing/include/: cgal_include.h  manifold_intersection.h  meshing_options.h  read_input.h  shoot_ray.h  single_measurement.h  utils.h
meshing/misc/: import_off.py
meshing/misc/python/: manifold_localization.py  marching_cube_test.py
meshing/misc/python/dc/: dual_contour_3d.py  qef.py  utils_3d.py
meshing/resources/polygons/: checkpoint.poly  square_room.poly
meshing/src/: main.cpp  manifold_intersection.cpp  meshing.cpp  read_input.cpp  single_measurement.cpp
scenes/: scene03.json  scene04.json  scene05.json  scene06.json
scripts/: RGM.py  RGM.ui  RGM_gui.py  RGM_gui_ui.py  RGM_gui_ui.ui  RGM_requirements.txt  RGM_solver.py  common.py  format_converter.py  get_boost.py  get_gmp.py  get_mpfr.py  get_python.py  grid_movement.py  locate.py  locate2.py  locate_pgn.txt  requirements.txt
src/: CMakeLists.txt  FDMLConfigVersion.cmake.in  main.cpp
src/cmds/: CMakeLists.txt
src/cmds/fdml_cli/: CMakeLists.txt  fdml.cpp  fdml_cli.cpp
src/cmds/fdml_daemon/: CMakeLists.txt  fdml_daemon.cpp
src/cpp/: CMakeLists.txt  main.cpp
src/cpp/include/: closer_edge.hpp  defs.h  localizator.h  localizator_daemon.h  trapezoid.h  trapezoider.h
src/cpp/src/: json_utils.cpp  json_utils.h  localizator.cpp  localizator_daemon.cpp  main.cpp  test.cpp  trapezoid.cpp  trapezoider.cpp  utils.hpp
src/fdml/: CMakeLists.txt
src/fdml/include/fdml/: locator_daemon.hpp
src/fdml/include/fdml/internal/: utils.hpp
src/fdml/lib/: trapezoid.cpp
src/fdmlpy/: CMakeLists.txt
src/fdmlpy/stubs/: fdmlpy.pyi
src/latex/: loc_square.tex  loc_square11.tex  loc_square2.tex
src/libs/: CMakeLists.txt
src/libs/fdml/: CMakeLists.txt  README.rst  setup.py  trapezoid.cpp  version.hpp.in
src/libs/fdml/include/fdml/: Hash_rational_point.hpp  bindings_types.hpp  config.hpp  defs.hpp  export_ft.hpp  localizator.hpp  localizator_daemon.hpp  locator.hpp  locator_daemon.hpp  python_iterator_templates.hpp  retcode.hpp  trapezoid.hpp  trapezoider.hpp  version.hpp
src/libs/fdml/include/fdml/internal/: closer_edge.hpp  json_utils.hpp  utils.hpp
src/libs/fdml/lib/: export_point_2.cpp  export_polygon_2.cpp  export_polygon_with_holes.cpp  export_polygon_with_holes_2.cpp  export_vector_2.cpp  fdml_pybindings.cpp  json_utils.cpp  localizator.cpp  localizator_daemon.cpp  locator.cpp  locator_daemon.cpp  trapezoid.cpp  trapezoider.cpp
src/libs/fdmlpy/: CMakeLists.txt
src/libs/fdmlpy/lib/: export_point_2.cpp  export_polygon_2.cpp  export_polygon_with_holes_2.cpp  export_vector_2.cpp  fdmlpy.cpp
src/libs/fdmlpy/stubs/: fdml.pyi
src/matlab/: solver.mat
src/py/: localizator.py  localizator_gui.py  scene_designer.py
src/py/gui/: GraphicsScenePlus.py  MainWindowsPlus.py  RDisc.py  RDiscRobot.py  RSegment_angle.py  gui.py  workshop_gui.ui  workshop_gui_dark.ui
src/py/localizator/: localizator.py
src/py/scene_designer/: gui_scene_designer.py  scene_designer.py
src/scripts/: locate.py  pgn.txt
(+128 files in other folders)
